--- a/fxs-platform-web/src/main/resources/templates/public_view_dispute_info.html
+++ b/fxs-platform-web/src/main/resources/templates/public_view_dispute_info.html
@@ -85,8 +85,8 @@
 							</form>
 							<br/>
 							<br/>
-							<form id="answerForm">
-							<table width="600" border="1" cellspacing="0" bordercolor="#000000" style="border-collapse:collapse;"> 
+							
+							<table th:width="600" border="1" cellspacing="0" bordercolor="#000000" style="border-collapse:collapse;"> 
 								<tr bgcolor="lightblue">
 									<th>答案编号</th>
 									<th>答案描述</th>
@@ -97,8 +97,7 @@
 										<input th:id="${answer.id}+_currentAnswer" disabled="disabled" type="text" th:value="${answer.id}"/>
 									</td>
 									<td width="150">
-										<!-- th:attr="disabled=${#strings.isEmpty(answer.description)} ? 'disabled' : 'false'" -->
-										<input disabled="disabled" type="text" th:value="${answer.description}"/>
+										<input disabled="disabled" th:id="${answer.id}+_currentAnswerDesc" type="text" th:value="${answer.description}"/>
 									</td>
 									<td>
 										<select th:id="${answer.id}+_selectParent" th:attr="disabled=${#strings.isEmpty(answer.description) or answer.nextQuestionId ne null} ? 'disabled' : 'false'">
@@ -111,17 +110,22 @@
 										</select>
 									</td>
 									<td>
-										<button type="button" style="width: 50px"
+										<button type="button"
+												th:if="${answer.nextQuestionId eq null}"
 												th:id="${answer.id}+_currentBind" 
 												th:attr="disabled=${#strings.isEmpty(answer.description) or (answer.nextQuestionId ne null)} ? 'disabled' : 'false'" 
 												class="addQAMapping">绑定</button>
+										<button type="button" th:class="unbindQAMapping" th:id="${answer.id}+_currentUnbind" th:if="${answer.nextQuestionId ne null}">解绑</button>
+										<button type="button" th:class="editAnswerInfo" th:id="${answer.id}+_editAnswerInfoBtn">编辑</button>
+										<button type="button" th:class="saveEditAnswerInfoBtn" style="display: none" th:id="${answer.id}+_saveEditAnswerInfoBtn">保存</button>
+										<button type="button" th:class="cancelEditAnswerInfo" style="display: none" th:id="${answer.id}+_cancelEditAnswerInfoBtn">取消</button>
 									</td>
 								</tr>
 								<tr th:if="${mappedQuestionAnswers eq null}">
 									<td width="150" th:text="没有数据" th:colspan="3"></td>
 								</tr>
 							</table>
-							</form>
+							
 							<a type="button" th:href="@{/disputeInfo/getAllDisputeInfo}">返回</a>
 					</td>
 				</tr>
@@ -237,7 +241,7 @@
 			var index = $(this).attr("id").split("_")[0];
 			var currentAnswerId = index;
 			var questionContainerId = index + "_selectParent";
-			var buttonId = index + "_currentBind"
+			//var buttonId = index + "_currentBind"
 			var selectedQuestionId = $("#"+questionContainerId+"").find("option:selected").attr("id")
 			
 			$.ajax({
@@ -250,13 +254,75 @@
 				contentType : "application/json; charset=utf-8",
 				success : function(data) {
 					//$("#"+questionContainerId+" option[value='"+selectedQuestionId+"']").remove()
-					$("#"+buttonId+"").attr("disabled", "disabled")
+					/* $("#"+buttonId+"").attr("disabled", "disabled")
 					$("#"+questionContainerId+"").attr("disabled", "disabled")
 					$("#modalContent").empty().append("绑定成功")
-					$("#notificationModal").modal("show")
+					$("#notificationModal").modal("show") */
+					location.reload()
 				},
 				error : function(error) {
 					$("#modalContent").empty().append("绑定失败")
+					$("#notificationModal").modal("show")
+				}
+			});
+		})
+		
+		
+		$(".editAnswerInfo").on("click", function() {
+			var answerId = $(this).attr("id").split("_")[0]
+			
+			$("#" + answerId + "_currentAnswerDesc").removeAttr("disabled")
+			$("#" + answerId + "_selectParent").removeAttr("disabled")
+			
+			$(this).css("display", "none")
+			$("#" + answerId + "_currentBind").css("display", "none")
+			$("#" + answerId + "_currentUnbind").css("display", "none")
+			$("#" + answerId + "_saveEditAnswerInfoBtn").css("display", "inline-block")
+			$("#" + answerId + "_cancelEditAnswerInfoBtn").css("display", "inline-block")
+		})
+		
+		$(".cancelEditAnswerInfo").on("click", function() {
+			location.reload()
+		})
+		
+		$(".saveEditAnswerInfoBtn").on("click", function() {
+			var index = $(this).attr("id").split("_")[0]
+			
+			$.ajax({
+				type : 'PUT',
+				url : '/disputeInfo/update/answer/basic',
+				data : JSON.stringify({
+					"id":  index,
+					"description": $("#" + index + "_currentAnswerDesc").val(),
+					"nextQuestionId": $("#" + index + "_selectParent").find("option:selected").attr("id")
+				}),
+				contentType : "application/json; charset=utf-8",
+				success : function(data) {
+					location.reload()
+				},
+				error : function(error) {
+					$("#modalContent").empty().append("修改失败")
+					$("#notificationModal").modal("show")
+				}
+			});
+		})
+		
+		$(".unbindQAMapping").on("click", function() {
+			var _this = this
+			
+			$.ajax({
+				type : 'PUT',
+				url : '/disputeInfo/update/answer/qaMapping',
+				data : JSON.stringify({
+					"id":  $(_this).attr("id").split("_")[0],
+					"nextQuestionId": null
+				}),
+				contentType : "application/json; charset=utf-8",
+				success : function(data) {
+					location.reload()
+				},
+				error : function(error) {
+					$("#modalContent").empty().append("解绑失败")
 					$("#notificationModal").modal("show")
 				}
 			});
