--- a/fxs-platform-web/src/main/resources/templates/public_view_dispute_info.html
+++ b/fxs-platform-web/src/main/resources/templates/public_view_dispute_info.html
@@ -126,7 +126,7 @@
 								</tr>
 							</table>
 							
-							<a type="button" th:href="@{/disputeInfo/getAllDisputeInfo}">返回</a>
+							<button type="button" onclick="history.go(-1)">返回</button>
 					</td>
 				</tr>
 			</table>
