--- a/fxs-platform-web/src/main/resources/templates/public_list_dispute_info.html
+++ b/fxs-platform-web/src/main/resources/templates/public_list_dispute_info.html
@@ -7,9 +7,10 @@
 	<div th:replace="fragments/litigant_header :: litigant-header" ></div>
 	<div class="mainPart">
 		<div class="container-fluid">
+			<form>
 			<div>
 				<span>所属案件类型： </span>
-				<select onchange="self.location=self.location.href.substring(0, self.location.href.lastIndexOf('/'))+'/'+this.options[this.selectedIndex].value">
+				<select onchange="retrieveQuestions(this)">
 					<option th:value="-1">选择从属案件类型</option>
 					<option th:each="belongsToFalltypus : ${availableFalltypus}" 
 							th:id="${belongsToFalltypus.id}" 
@@ -18,29 +19,40 @@
 				</select>
 			</div>
 			<br />
-			<table style="border-collapse: collapse;" border="1" bordercolor="#006699" width="800">
-				<tr bgcolor="lightblue">
-					<th>问题编号</th>
-					<th>问题描述</th>
-					<th>是否根问题</th>
-					<th>类型</th>
-					<th>操作</th>
-				</tr>
-				<tr th:each="question : ${questionList}">
-					<td th:text="${question.id}"></td>
-					<td th:text="${question.description}"></td>
-					<td th:text="${question.isRootQuestion eq 'Y' ? '是' : '否'}"></td>
-					<td th:text="${question.questionType eq null ? 'NA' : question.questionType eq '0' ? '单选题' : question.questionType eq '1' ? '多选题' : '用户输入'}"></td>
-					<td>
-						<a th:href="@{/disputeInfo/viewDisputeInfo/{id}(id=${question.id})}">查看</a>
-						<a href="" th:class="deleteQuestionLink"  th:id="${question.id}">删除</a>
-				 	</td>
-				</tr>
-			</table>
+			<div id="questionBlock">
+				<table style="border-collapse: collapse;" border="1" bordercolor="#006699" width="800">
+					<tr bgcolor="lightblue">
+						<th>问题编号</th>
+						<th>问题描述</th>
+						<th>是否根问题</th>
+						<th>类型</th>
+						<th>操作</th>
+					</tr>
+					<tr th:each="question : ${questionList}">
+						<td th:text="${question.id}"></td>
+						<td th:text="${question.description}"></td>
+						<td th:text="${question.isRootQuestion eq 'Y' ? '是' : '否'}"></td>
+						<td th:text="${question.questionType eq null ? 'NA' : question.questionType eq '0' ? '单选题' : question.questionType eq '1' ? '多选题' : '用户输入'}"></td>
+						<td>
+							<a th:href="@{/disputeInfo/viewDisputeInfo/{id}(id=${question.id})}">查看</a>
+							<a href="" th:class="deleteQuestionLink"  th:id="${question.id}">删除</a>
+					 	</td>
+					</tr>
+				</table>
+			</div>
+			</form>
 		</div>
 		<a th:href="@{/disputeInfo/createDisputeInfo}" type="button" class="btn btn-primary btn-lg btn-block">新建</a>
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer" ></div>
     <script type="text/javascript" th:inline="javascript" th:src="@{/js/disputeInfo.js}"></script>
+    <script type="text/javascript">
+    function retrieveQuestions(self) {
+    	console.log(self.value)
+        var url = '/disputeInfo/filterDisputeInfo/' + self.value;
+
+        $("#questionBlock").empty().load(url);
+    }
+    </script>
 </body>
 </html>
