--- a/fxs-platform-web/src/main/resources/templates/fragments/filteredQuestionList.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/filteredQuestionList.html
@@ -9,7 +9,7 @@
 			<th>类型</th>
 			<th>操作</th>
 		</tr>
-		<tr th:each="question : ${questionList}">
+		<tr th:if="${not #lists.isEmpty(questionList)}" th:each="question : ${questionList}">
 			<td th:text="${question.id}"></td>
 			<td th:text="${question.description}"></td>
 			<td th:text="${question.isRootQuestion eq 'Y' ? '是' : '否'}"></td>
@@ -18,6 +18,9 @@
 				<a th:href="@{/disputeInfo/viewDisputeInfo/{id}(id=${question.id})}">查看</a>
 				<a href="" th:class="deleteQuestionLink"  th:id="${question.id}">删除</a>
 		 	</td>
+		</tr>
+		<tr th:if="${#lists.isEmpty(questionList)}">
+			<td colspan="5" style="text-align: center">没有数据</td>
 		</tr>
 	</table>
 </div>
