--- a/fxs-platform-web/src/main/resources/templates/fragments/lawyer_header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/lawyer_header.html
@@ -23,10 +23,10 @@
 					<nav class="col-md-9 navbar-default" role="navigation">
 						<ul class="nav mainNav">
 							<li>
-								<a th:href="@{/user/dashboard}">个人中心</a>
+								<a th:href="@{/user/dashboard(requestFrom='REQUEST_FROM_LAWYER_USER_CENTER')}">个人中心</a>
 							</li>
 							<li class="active">
-								<a th:href="@{/user/dashboard}">诉讼业务</a>
+								<a th:href="@{/user/dashboard(requestFrom='REQUEST_FROM_LAWYER_USER_CENTER')}">诉讼业务</a>
 							</li>
 							<li>
 								<a th:href="@{/lawyer/case_pool}">咨询池</a>
