--- a/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
@@ -54,7 +54,7 @@
 								</div>
 							</ul>
 							<div id="consultingBlock" th:fragment="consultingBlock-fragment">
-								<ul th:if="${not #lists.isEmpty(session.pageableData)}" class="writeInfoText ulCell myCell centerLi" th:each="freeConsulting : ${session.pageableData}">
+								<ul th:if="${not #lists.isEmpty(pageableData)}" class="writeInfoText ulCell myCell centerLi" th:each="freeConsulting : ${pageableData}">
 									<li class="listTitle">案件类型 : <b th:text="${freeConsulting.falltypusType}"></b> 
 										<span>案件编号 : <span th:text="${freeConsulting.id}"></span></span>
 									</li>
@@ -65,10 +65,10 @@
 										</div>
 									</div>
 								</ul>
-								<div th:if="${not #lists.isEmpty(session.pageableData)}">
-									<div th:include="fragments/page :: pager" th:remove="tag"></div>
+								<div th:if="${not #lists.isEmpty(pageableData)}">
+									<div th:include="fragments/page :: paginationbar" th:remove="tag"></div>
 								</div>
-								<ul th:if="${#lists.isEmpty(session.pageableData)}" class="writeInfoText ulCell myCell">未找到相关记录</ul>
+								<ul th:if="${#lists.isEmpty(pageableData)}" class="writeInfoText ulCell myCell">未找到相关记录</ul>
 							</div>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 			$("#searchConsultingWithFilter").on("click", function() {
 				$.ajax({
 					type : 'GET',
-					url : "/user/case?caseType=0&"+(viewUnRead=='N' ? "isRead=N" : "isRead=Y")+"&searchFrom=SEARCH_FROM_LAWYER_CASEPOLL",
+					url : "/user/case?caseType=0&"+(viewUnRead=='N' ? "isRead=N" : "isRead=Y")+"&searchFrom=SEARCH_FROM_LAWYER&requestFrom="+location.pathname,
 					success : function(data) {
 						console.log(data)
 						$('#consultingBlock').html(data);
