--- a/fxs-platform-web/src/main/resources/templates/fragments/lawyer_header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/lawyer_header.html
@@ -29,7 +29,7 @@
 								<a th:href="@{/user/dashboard(requestFrom='REQUEST_FROM_LAWYER_USER_CENTER')}">诉讼业务</a>
 							</li>
 							<li>
-								<a th:href="@{/lawyer/case_pool}">咨询池</a>
+								<a th:href="@{/lawyer/case_pool(requestFrom='REQUEST_FROM_LAWYER_USER_CENTER')}">咨询池</a>
 							</li>
 							<li>
 								<a th:href="@{/signOut}" sec:authorize="isAuthenticated()">登出</a>
