--- a/fxs-platform-web/src/main/resources/templates/fragments/page.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/page.html
@@ -9,24 +9,24 @@
         <div>
             <ul class='pagination pagination-centered'>
                 <li th:class="${page.firstPage}?'disabled':''">
-                <span th:if='${page.firstPage}'>← First</span>
-                <a th:if='${not page.firstPage}' th:href='@{${page.url}(page=0,size=${page.size})}'>← First</a>
+                <span th:if='${page.firstPage}'>第一页</span>
+                <a th:if='${not page.firstPage}' th:href='@{${page.url}(page=0,size=${page.size})}'>第一页</a>
                 </li>
                 <li th:class="${page.hasPreviousPage}? '' : 'disabled'">
-                <span th:if='${not page.hasPreviousPage}'>«</span>
-                <a th:if='${page.hasPreviousPage}' th:href='@{${page.url}(page=${page.number-2},size=${page.size})}' title='Go to previous page'>«</a>
+                <span th:if='${not page.hasPreviousPage}'>上一页</span>
+                <a th:if='${page.hasPreviousPage}' th:href='@{${page.url}(page=${page.number-2},size=${page.size})}' title='Go to previous page'>上一页</a>
                 </li>
                 <li th:each='item : ${page.items}' th:class="${item.current}? 'active' : ''">
                 <span th:if='${item.current}' th:text='${item.number}'>1</span>
                 <a th:if='${not item.current}' th:href='@{${page.url}(page=${item.number-1},size=${page.size})}'><span th:text='${item.number}'>1</span></a>
                 </li>
                 <li th:class="${page.hasNextPage}? '' : 'disabled'">
-                <span th:if='${not page.hasNextPage}'>»</span>
-                <a th:if='${page.hasNextPage}' th:href='@{${page.url}(page=${page.number},size=${page.size})}' title='Go to next page'>»</a>
+                <span th:if='${not page.hasNextPage}'>下一页</span>
+                <a th:if='${page.hasNextPage}' th:href='@{${page.url}(page=${page.number},size=${page.size})}' title='Go to next page'>下一页</a>
                 </li>
                 <li th:class="${page.lastPage}? 'disabled' : ''">
-                <span th:if='${page.lastPage}'>Last →</span>
-                <a th:if='${not page.lastPage}' th:href='@{${page.url}(page=${page.totalPages - 1},size=${page.size})}'>Last →</a>
+                <span th:if='${page.lastPage}'>尾页</span>
+                <a th:if='${not page.lastPage}' th:href='@{${page.url}(page=${page.totalPages - 1},size=${page.size})}'>尾页</a>
                 </li>
             </ul>
         </div>
