--- a/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
@@ -13,12 +13,12 @@
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/litigant/case/consulting/free(caseType='0')}">
+								<a th:href="@{/litigant/case/consulting/free}">
 									<img th:src="@{/img/mycenter_free.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/litigant/case/consulting/free(caseType='0')}"><span>我的免费咨询</span></a>
+								<a th:href="@{/litigant/case/consulting/free}"><span>我的免费咨询</span></a>
 							</li>
 						</ul>
 					</div>
@@ -37,12 +37,12 @@
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/litigant/case/lawsuit/request_lawyer(caseType='1')}">
+								<a th:href="@{/litigant/case/lawsuit/biddingCase}">
 									<img th:src="@{/img/mycenter_aj.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/litigant/case/lawsuit/request_lawyer(caseType='1')}"><span>我的竞标案件</span></a>
+								<a th:href="@{/litigant/case/lawsuit/biddingCase}"><span>我的竞标案件</span></a>
 							</li>
 						</ul>
 					</div>
